distribution/kubecost-resources/kubecost-autorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kubecost-allow-external-access
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
  - to:
    - operation:
        hosts:
        - <<__subdomain_kubecost__>>.<<__domain__>>
